[package]
name = "ereader"
version = "0.1.0"
authors = ["csos95 <csoscss@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
epub = "1.2.3"
itertools = "0.10.1"
once_cell = "1.8.0"
thiserror = "1.0.26"
zip = "0.5.13"

[dependencies.async-std]
version = "1.9.0"
features = ["attributes"]

[dependencies.cursive]
version = "0.16.3"
default-features = false
features = ["crossterm-backend"]

[dependencies.sqlx]
version = "0.5.5"
features = ["runtime-async-std-rustls", "sqlite", "macros", "migrate", "chrono"]
